feat: migrate to Pydantic AI architecture

--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,1 +1,17 @@
-logging_level: DEBUG
+# Development environment configuration
+# This file can be used to override default settings for development
+
+env: dev
+logging_level: "DEBUG"
+
+# Uncomment and configure these for development
+# discord:
+#   listening_channel_id: 123456789  # Your Discord channel ID
+
+# cloudflare:
+#   model: "@cf/meta/llama-2-7b-chat-fp16"  # Different model for testing
+
+# openai:
+#   model: "gpt-4"  # Use GPT-4 for development
+
+# ai_provider: "openai"  # Switch to OpenAI for development
